samples/_failures_safe/1761413515_27c6db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d902349c.c: In function ‘main’:
./samples/SAFE/__tmp_d902349c.c:132:11: error: expected ‘;’ at end of input
  132 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_d902349c.c:132:5: error: expected declaration or statement at end of input
  132 |     printf
      |     ^~~~~~
